k8s/apps/monitoring/node-exporter/app/netpol.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-exporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: node-exporter
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: kube-prometheus-stack-prometheus
